--- a/requirements.txt
+++ b/requirements.txt
@@ -20,3 +20,11 @@ six==1.17.0
 typing_extensions==4.14.1
 Werkzeug==3.1.3
 flask-cors==6.0.1
+# Extra packages for testing / runtime
+pytest
+pytest-mock
+psycopg2-binary
+redis
+flask-caching
+peewee
+voluptuous
